# of_core_jni

./: CMakeLists.txt  NOTICE  README.md
documentation/: openfiles_jni.h
include/ofc_jni/: com_connectedway_io_File.h  com_connectedway_io_FileDescriptor.h  com_connectedway_io_FileInputStream.h  com_connectedway_io_FileOutputStream.h  com_connectedway_io_FileSystem.h  com_connectedway_io_FileWriter.h  com_connectedway_io_Framework.h  com_connectedway_io_Framework_netBIOSMode.h  com_connectedway_io_RandomAccessFile.h  com_connectedway_io_Resolver.h  com_connectedway_io_Utils.h
java/: CMakeLists.txt
java/com/connectedway/io/: File.java  FileDescriptor.java  FileInputStream.java  FileOutputStream.java  FileSystem.java  FileWriter.java  Framework.java  RandomAccessFile.java  Resolver.java
java/com/connectedway/nio/directory/: Directory.java  FileDirectoryStream.java
src/: com_connectedway_io_Filesystem.c  com_connectedway_io_Framework.c  com_connectedway_io_Resolver.c  com_connectedway_io_Utils.c
src/java/com/connectedway/io/: FileDescriptor.java  FileInputStream.java  FileProvider.java  Framework.java
test/: CMakeLists.txt  OfcExplorer.java
